--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Móveis Personalizados</title>
+    <title>Móveis Personalizados.</title>
   </head>
   <body>
     <img id="balls" src="./assets/balls-decoration.svg" alt="" />
